Issue # 3184567: Add custom scrollbar plugin

--- a/assets/css/morris-chart.scss
+++ b/assets/css/morris-chart.scss
@@ -4,7 +4,7 @@
     color: inherit !important;
     text-align: left;
 
-    .morris-hover-marker {
+    &-marker {
       border-radius: 50%;
       display: inline-block;
       height: 8px;
@@ -20,20 +20,20 @@
   margin-left: 1em;
   margin-top: 0.5em;
 
-  .morris-legend-point {
+  &-point {
     display: inline-block;
     font-size: 0.75rem;
     margin-right: 10px;
     vertical-align: top;
 
-    .morris-legend-marker {
-      border-radius: 50%;
-      display: inline-block;
-      height: 9px;
-      margin-right: 3px;
-      width: 9px;
-    }
+  }
 
+  &-marker {
+    border-radius: 50%;
+    display: inline-block;
+    height: 9px;
+    margin-right: 3px;
+    width: 9px;
   }
 
 }
@@ -52,12 +52,12 @@ div.morris-label-highlight {
   font-size: 13px;
   color: #777777;
 
-  .follow-changes-period {
+  &-period {
     font-weight: bold;
     margin-right: 10px;
   }
 
-  .follow-changes-data {
+  &-data {
     position: relative;
     display: inline-block;
     line-height: 1;
@@ -67,7 +67,7 @@ div.morris-label-highlight {
     font-weight: bold;
     font-family: sans-serif;
 
-    &.follow-changes-data-increase {
+    &-increase {
       color: #3c763d;
       background-color: #dff0d8;
       border-color: #d6e9c6;
@@ -82,7 +82,7 @@ div.morris-label-highlight {
       }
     }
 
-    &.follow-changes-data-decrease {
+    &-decrease {
       color: #a94442;
       background-color: #f2dede;
       border-color: #ebccd1;
@@ -97,11 +97,17 @@ div.morris-label-highlight {
       }
     }
 
-    &.follow-changes-data-no-change {
+    &-no-change {
       padding-left: 10px;
-      color: #777777;
+      color: #777;
       background-color: #f3f3f3;
       border-color: #e6e6e6;
     }
+  }
+}
+
+.chart-block {
+  &--wrapper {
+    width: 1000px;
   }
 }
